--- a/profile/example.properties
+++ b/profile/example.properties
@@ -25,3 +25,10 @@ cerberus.lambda_artifact.s3_bucket=[The bucket name to store the compiled lambda
 health_check.regions=[comma deliminated list of regions to deploy the health check lambda to]
 
 cleanup.kms_expiration_period_in_days=[Clean up KMS keys that have been inactive for n days]
+
+log_processor.region=[The region in which to deploy the log processor Lambda. Note: Deploy the Lambda in the same region as where the S3 logs are sent]
+log_processor.blacklist_for_x_mins_after_violation=[The number of minutes to blacklist an IP address for after it has violated the rate limit]
+log_processor.request_per_minute_limit=[The number of requests per minute allowed per IP address]
+log_processor.google_analystics_id=[The ID of the Google Analytics account to which the Lambda will send KPIs. This property is nullable]
+log_processor.slack_web_hook_url=[The Slack HTTP endpoint to which the Lambda will post rate limit notifications. This property is nullable]
+log_processor.slack_cerberus_icon=[URL of an icon image file to be used in Slack. This property is nullable]
