--- a/gradle/buildscript.gradle
+++ b/gradle/buildscript.gradle
@@ -6,4 +6,5 @@ dependencies {
     classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
     classpath "gradle.plugin.com.fieldju:gradle-aws-sam-deployer-plugin:1.6.0"
     classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3'
+    classpath 'com.amazonaws:aws-java-sdk-s3:1.11.229'
 }
