--- a/profile/example.properties
+++ b/profile/example.properties
@@ -20,7 +20,7 @@ cerberus.admin_principal_arn=[Arn for admin user or role for administrating KMS 
 cerberus.primary_region=[The primary cerberus region]
 cerberus.metric_topic_regions=[The regions in which to create an SNS topic to publish Cerberus Metrics/KPIs to]
 cerberus.lambda_vpc_region=[The region you want the lambdas to run in]
-cerberus.lambda_artifact.s3_bucket=[The bucket name to store the compiled lambda artifact in]
+cerberus.lambda_uploads_region_buckets=us-west-2:bucketname,us-east-1:bucketname
 
 health_check.regions=[comma deliminated list of regions to deploy the health check lambda to]
 
@@ -29,6 +29,5 @@ cleanup.kms_expiration_period_in_days=[Clean up KMS keys that have been inactive
 log_processor.region=[The region in which to deploy the log processor Lambda. Note: Deploy the Lambda in the same region as where the S3 logs are sent]
 log_processor.blacklist_for_x_mins_after_violation=[The number of minutes to blacklist an IP address for after it has violated the rate limit]
 log_processor.request_per_minute_limit=[The number of requests per minute allowed per IP address]
-log_processor.google_analystics_id=[The ID of the Google Analytics account to which the Lambda will send KPIs. This property is nullable]
 log_processor.slack_web_hook_url=[The Slack HTTP endpoint to which the Lambda will post rate limit notifications. This property is nullable]
 log_processor.slack_cerberus_icon=[URL of an icon image file to be used in Slack. This property is nullable]
