--- a/cerberus-log-processor-lambda/build.gradle
+++ b/cerberus-log-processor-lambda/build.gradle
@@ -31,7 +31,8 @@ dependencies {
     compile group: 'com.amazonaws', name: 'aws-lambda-java-core', version: '1.1.0'
     compile group: 'com.amazonaws', name: 'aws-lambda-java-log4j', version: '1.0.0'
     compile group: 'com.amazonaws', name: 'aws-lambda-java-events', version: '1.3.0'
-    compile group: 'com.amazonaws', name: 'aws-java-sdk-cloudformation', version: '1.11.229'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-cloudformation', version: '1.11.272'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-lambda', version: '1.11.272'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.3'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.3'
     compile group: 'com.google.guava', name: 'guava', version: '19.0'
@@ -40,7 +41,7 @@ dependencies {
     compile group: 'com.amazonaws', name: 'aws-java-sdk-waf', version: '1.11.221'
     compile group: 'com.fieldju', name: 'slack-client', version: '2.0.0'
     compile group: 'com.brsanthu', name: 'google-analytics-java', version: '1.1.2'
-    compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.229'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk-s3', version: '1.11.272'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
@@ -53,7 +54,7 @@ shadowJar {
 
 'aws-sam-deployer' {
     region = getProfileProperty('cerberus.primary_region')
-    s3Bucket = getProfileProperty('cerberus.lambda_artifact.s3_bucket')
+    s3Bucket = getRegionBucketMap(getProfileProperty('cerberus.lambda_uploads_region_buckets')).get(getProfileProperty('cerberus.primary_region'))
     s3Prefix = "${project.getName()}-artifact-uploads"
     stackName = "${getCFStackName()}"
     samTemplatePath = "${project.projectDir}${File.separator}application.yaml"
@@ -67,7 +68,6 @@ shadowJar {
             RequestPerMinuteLimit: getProfileProperty('log_processor.request_per_minute_limit'),
             SlackWebHookUrl: getProfileProperty('log_processor.slack_web_hook_url'),
             SlackIcon: getProfileProperty('log_processor.slack_cerberus_icon'),
-            GoogleAnalyticsId: getProfileProperty('log_processor.google_analystics_id'),
             ManualBlacklistIpSetId: getProfileProperty('log_processor.manual_blacklist_ip_set_id'),
             ManualWhitelistIpSetId: getProfileProperty('log_processor.manual_whitelist_ip_set_id'),
             RateLimitAutoBlacklistIpSetId: getProfileProperty('log_processor.auto_blacklist_ip_set_id')
@@ -92,7 +92,7 @@ task associateLambdaWithS3Bucket() {
         Stack stack = getCloudFormationStack(cloudFormationClient, stackName)
         String lambdaFunctionArn = getOutputValueForKey(stack, "LambdaLogProcessorFunctionArn")
         String lambdaIamRoleArn = getOutputValueForKey(stack, "LogProcessorLambdaRoleArn")
-        println "Found lambda stack: '${stack.getStackName()}', lambda function ARN: '${lambdaFunctionArn}'"
+        println "Found lambda stack: '${stack.getStackName()}', lambda function ARN: '${lambdaFunctionArn}', lambda iam role ARN: '${lambdaIamRoleArn}'"
 
         AmazonS3 s3Client = AmazonS3ClientBuilder.standard()
                 .withRegion(region)
