--- a/cerberus-log-processor-lambda/build.gradle
+++ b/cerberus-log-processor-lambda/build.gradle
@@ -62,7 +62,8 @@ shadowJar {
             CerberusUrl: getProfileProperty('cerberus.url'),
             CerberusEnvironment: "${project.environment}",
             ViolationBlacklistDurationInMins: getProfileProperty('log_processor.violation_blacklist_duration_in_mins'),
-            RequestPerHourLimit: getProfileProperty('log_processor.request_per_hour_limit'),
+            RequestPerIntervalLimit: getProfileProperty('log_processor.request_per_interval_limit'),
+            IntervalInMins: getProfileProperty('log_processor.interval_in_mins'),
             SlackWebHookUrl: getProfileProperty('log_processor.slack_web_hook_url'),
             SlackIcon: getProfileProperty('log_processor.slack_cerberus_icon'),
             ManualBlacklistIpSetId: getProfileProperty('log_processor.manual_blacklist_ip_set_id'),
