--- a/profile/example.properties
+++ b/profile/example.properties
@@ -29,12 +29,16 @@ cleanup.kms_expiration_period_in_days=[Clean up KMS keys that have been inactive
 # Log processor properties
 log_processor.region=[The region in which to deploy the log processor Lambda. Note: Deploy the Lambda in the same region as where the S3 logs are sent]
 log_processor.blacklist_for_x_mins_after_violation=[The number of minutes to blacklist an IP address for after it has violated the rate limit]
-log_processor.request_per_minute_limit=[The number of requests per minute allowed per IP address]
+log_processor.request_per_interval_limit=[The number of requests per minute allowed per IP address]
+log_processor.interval_in_mins=[The interval in minutes of requests per interval allowed per IP address]
 log_processor.slack_web_hook_url=[The Slack HTTP endpoint to which the Lambda will post rate limit notifications. This property is nullable]
 log_processor.slack_cerberus_icon=[URL of an icon image file to be used in Slack. This property is nullable]
+log_processor.athena_query_result_bucket_name=[The name of Athena query result's S3 bucket]
 
 ## Environment specific
 log_processor.alb_log_bucket=[The S3 bucket where ALB logs are stored for Cerberus]
 log_processor.manual_blacklist_ip_set_id=[ID of the AWS WAF manual blacklist IP set]
 log_processor.manual_whitelist_ip_set_id=[ID of the AWS WAF manual whitelist IP set]
 log_processor.auto_blacklist_ip_set_id=[ID of the AWS WAF auto blacklist (greylist) IP set]
+log_processor.athena_database_name=[The name of ALB log's Athena database]
+log_processor.athena_table_name=[The name of ALB log's Athena table]
