updated admin iam role

--- a/cerberus-admin-iam-role/admin-iam-role.yaml
+++ b/cerberus-admin-iam-role/admin-iam-role.yaml
@@ -68,6 +68,10 @@ Resources:
                 Action:
                   - SNS:Publish
                 Resource: !ImportValue CerberusMetricsTopicARN
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonAthenaFullAccess
+        - arn:aws:iam::aws:policy/AmazonS3FullAccess
+
 
 Outputs:
   CerberusAdminIamRoleARN:
