Create and configure gradle file for new lambda.

--- a/profile/example.properties
+++ b/profile/example.properties
@@ -14,6 +14,9 @@
 # limitations under the License.
 #
 
+# Admin arn for executing admin endpoints from lambda
+cerberus.lambda.admin_arn=[the admin arn made by ./cerberus-admin-iam-rol/admin-iam-role.yaml]
+
 # General Cerberus config
 cerberus.url=[The Cerberus base url]
 cerberus.admin_principal_arn=[Arn for admin user or role for administrating KMS keys and allowing assumption of roles]
