--- a/cerberus-log-processor-lambda/application.yaml
+++ b/cerberus-log-processor-lambda/application.yaml
@@ -39,7 +39,7 @@ Parameters:
   SlackWebHookUrl:
     Type: String
     Description: The Slack HTTP endpoint to which the Lambda will post rate limit notifications
-    SlackWebHookUrl: true
+    NoEcho: true
   AthenaDatabaseName:
     Type: String
     Description: The name of ALB log's Athena database
