feat: Refactor to use the Cerberus Java Client for the healthcheck

--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,4 @@ src/main/resources/cloudformation/**
 /profile/dev.properties
 /profile/prod.properties
 /profile/global.properties
+/profile/cnprod.properties
