--- a/cerberus-health-check-lambda/build.gradle
+++ b/cerberus-health-check-lambda/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     compile group: 'com.amazonaws', name: 'aws-lambda-java-log4j', version: '1.0.0'
     compile group: 'com.amazonaws', name: 'aws-lambda-java-events', version: '1.3.0'
     compile group: 'com.amazonaws', name: 'aws-java-sdk-kms', version: "${awsSdkVersion}"
+    compile "com.nike:cerberus-client:7.3.1"
 
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
