--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ deploy:
     tags: true
 notifications:
   slack:
-    if: branch = master AND type = push
+    if: branch = master AND (type = push OR type=cron)
     on_success: change
     on_failure: always
     rooms:
